--- a/module_review/templates/admin_dashboard/program_detail.html
+++ b/module_review/templates/admin_dashboard/program_detail.html
@@ -96,6 +96,9 @@
                     <a class="nav-link" href="{% url 'admin_program_create' %}">Create Programs</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'admin_academicyear_list' %}">Academic Year</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
             </ul>
