--- a/module_review/templates/admin_dashboard/add_module.html
+++ b/module_review/templates/admin_dashboard/add_module.html
@@ -21,6 +21,10 @@
         .container {
             max-width: 800px;
             margin: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 40px;
             background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -92,31 +96,11 @@
     </nav>
 
     <!-- Page Content -->
+    <h2 style="margin-top: 10vh;">Add Module</h2>
     <div class="container">
-        <div style="text-align: right; margin-top: 5px;">
-            <a href="{% url 'admin_module_upload_xlsx' %}" class="btn btn--radius-2 btn--blue">Upload XLSX</a>
-        </div>
-        <h2>Create Module</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.non_field_errors }}
-            <div class="form-group">
-                <label for="{{ form.module_code.id_for_label }}">Module Code:</label>
-                {{ form.module_code }}
-                {{ form.module_code.errors }}
-            </div>
-            <div class="form-group">
-                <label for="{{ form.module_name.id_for_label }}">Module Name:</label>
-                {{ form.module_name }}
-                {{ form.module_name.errors }}
-            </div>
-            <div class="form-group">
-                <label for="{{ form.module_leader.id_for_label }}">Module Leader:</label>
-                {{ form.module_leader }}
-                {{ form.module_leader.errors }}
-            </div>
-            <button type="submit" class="btn btn-submit">Create Module</button>
-        </form>
+        <a href="{% url 'admin_module_create' %}" class="btn btn--radius-2 btn--blue">Create Module</a>
+        <a href="{% url 'admin_module_upload_xlsx' %}" class="btn btn--radius-2 btn--blue">Upload Module(.xlsx)</a>
+        
     </div>
 
     <!-- Bootstrap JS and dependencies (jQuery, Popper.js) -->
