--- a/module_review/templates/admin_dashboard/upload_xlsx.html
+++ b/module_review/templates/admin_dashboard/upload_xlsx.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Admin Dashboard</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Admin Dashboard</a>
     </nav>
 
     <div class="page-wrapper">
