--- a/module_review/templates/admin_dashboard/upload_xlsx.html
+++ b/module_review/templates/admin_dashboard/upload_xlsx.html
@@ -90,7 +90,7 @@
 
     <div class="page-wrapper">
         <div class="back-link">
-            <p>Back to <a href="{% url 'admin_module_list' %}">home</a> page</p>
+            <p>Back to <a href="{% url 'home' %}">home</a> page</p>
         </div>
 
         <div class="container">
